--- a/mảng.html
+++ b/mảng.html
@@ -5,6 +5,27 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    // 1
+// myColor = ["Red", "Green", "White", "Black"];
+// console.log(myColor.toString());
+    var num=window.prompt();
+    var str = num.toString();
+    var result = [str[0]];
 
+    for(var x=1; x<str.length; x++)
+    {
+        if((str[x-1]%2 === 0)&&(str[x]%2 === 0))
+        {
+            result.push('-', str[x]);
+        }
+        else
+        {
+            result.push(str[x]);
+        }
+    }
+    console.log(result.join(''));
+    // html  equal display setting kitiing
+</script>
 </body>
 </html>
